# EdgeDb

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
src/graph/: graph.c  graph.h
src/mem/: allocate.c  allocate.h
src/node/: node.c  node.h
src/prop/: prop.c  prop.h
src/shell/: shell.c  shell.h
